--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -11,7 +11,7 @@ const html = marked(markdown);
 
 <footer
   client:load
-  class="border-t bg-white px-[var(--page-margin)] pt-4 pb-4 md:border-0 md:pb-2"
+  class="border-t bg-white px-[var(--page-margin)] pt-4 pb-4 md:border-0 md:pb-2 xl:pb-6"
 >
   <div
     class="body1 flex flex-col-reverse flex-wrap justify-between gap-4 md:flex-row 2xl:py-8"
