--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -54,19 +54,23 @@ const currentPage = Astro.url.pathname; // Get the current page's pathname
 
   const navToggle = document.querySelector("#nav-toggle");
 
+  const header = document.querySelector("header");
+
   ScrollTrigger.create({
     start: 0,
     end: "max",
     onUpdate: ({ direction, scroll }) => {
       if (navToggle.checked) return;
-      gsap.to("header", {
-        y: direction === -1 ? 0 : "-100%",
-        duration: 0.7,
-        ease: "power1.out",
+
+      const yTarget = direction === -1 ? 0 : -header.offsetHeight;
+      gsap.to(header, {
+        y: yTarget,
+        duration: 0.5,
+        ease: "power2.out",
+        overwrite: "auto",
       });
-      document
-        .querySelector("header")
-        .classList.toggle("shadow-md", scroll() > 0);
+
+      header.classList.toggle("shadow-md", scroll() > 0);
     },
   });
 </script>
