--- a/src/components/cards/FullListCard.astro
+++ b/src/components/cards/FullListCard.astro
@@ -75,7 +75,7 @@ contentArray = prepareAndSortContent(contentArray);
               {item.title && (
                 <h3 class="body1 col-span-3 flex flex-col gap-2 !leading-normal font-semibold text-balance">
                   {item.link?.href ? (
-                    <a href={item.link.href} class="linkout">
+                    <a href={item.link.href} class="linkout" target="_blank">
                       {item.title}
                     </a>
                   ) : (
