--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -124,13 +124,13 @@ const parsedRecognition = recognition.map((item) => marked.parseInline(item));
         for="expand-article"
         class="heading2 block cursor-pointer px-[var(--page-margin)] peer-checked:hidden md:hidden"
       >
-        + Read more
+        + View more
       </label>
       <label
         for="expand-article"
         class="heading2 hidden cursor-pointer px-[var(--page-margin)] peer-checked:block md:hidden"
       >
-        - Read less
+        - View less
       </label>
     </div>
 
