--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -5,10 +5,12 @@ import { render } from "astro:content";
 
 export async function getStaticPaths() {
   const posts = await getCollection("work");
-  return posts.map((post) => ({
-    params: { slug: post.id },
-    props: post,
-  }));
+  return posts
+    .filter((post) => post.data.archived === false)
+    .map((post) => ({
+      params: { slug: post.id },
+      props: post,
+    }));
 }
 
 const post = Astro.props;
