--- a/src/components/global/BaseHead.astro
+++ b/src/components/global/BaseHead.astro
@@ -43,7 +43,7 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 
 <!-- router for SPA -->
 <!-- <ClientRouter /> -->
-<LoadingIndicator color="#0000ff" animationDuration={500} />
+<!-- <LoadingIndicator color="#0000ff" animationDuration={500} /> -->
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
