--- a/src/components/global/BaseHead.astro
+++ b/src/components/global/BaseHead.astro
@@ -21,7 +21,7 @@ const structuredData = {
   "@type": "Person",
   name: "Munus Shih",
   url: "https://munusshih.com",
-  image: "https://munusshih.com/images/profile.jpg", // ideally a portrait-style profile photo
+  image: "https://munusshih.com/profile.jpg", // ideally a portrait-style profile photo
   jobTitle: "Assistant Professor, Creative Technologist, Artist, and Designer",
   worksFor: {
     "@type": "Organization",
