--- a/src/components/global/DraggableCard.astro
+++ b/src/components/global/DraggableCard.astro
@@ -1,6 +1,4 @@
-<section
-  class="draggable fade-in transition-all ease-in-out hover:scale-[102%]"
->
+<section class="draggable transition-all ease-in-out hover:scale-[102%]">
   <slot />
 </section>
 
