--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,19 +14,19 @@ import Media from "../components/utils/Media.astro";
   image={`/thumbnails/index.jpg`}
 >
   <main
-    class="relative grid h-auto w-full grid-cols-1 items-center justify-items-center gap-y-[8vw] overflow-hidden p-[var(--page-margin)] py-20 sm:grid-cols-2"
+    class="fade-in relative grid h-auto w-full grid-cols-1 items-center justify-items-center gap-y-[8vw] overflow-hidden p-[var(--page-margin)] py-20 sm:grid-cols-2"
   >
     <h1
       class="responsive-title fixed top-10 -z-10 w-full self-center leading-tight tracking-tighter sm:absolute"
     >
-      <span class="fade-in">Munus</span>
-      <span class="fade-in">Codes</span>
-      <span class="fade-in">Zines,</span>
-      <span class="fade-in">Design,</span>
-      <span class="fade-in">Tools</span>
-      <span class="fade-in">and</span>
-      <span class="fade-in">Many</span>
-      <span class="fade-in">More</span>
+      <span>Munus</span>
+      <span>Codes</span>
+      <span>Zines,</span>
+      <span>Design,</span>
+      <span>Tools</span>
+      <span>and</span>
+      <span>Many</span>
+      <span>More</span>
     </h1>
 
     <IntroCard size={"x2-card"} />
