--- a/src/components/utils/Media.astro
+++ b/src/components/utils/Media.astro
@@ -26,7 +26,7 @@ const posterSrc = "posters" + src.replace(/\.(mp4|webm|ogg)$/i, ".jpg");
       muted
       playsinline
       webkit-playsinline
-      class={`media *:h-auto ${widthAuto ? "w-auto" : "w-full"} object-cover ${cropped ? "[clip-path:inset(-3px)]" : ""} ${className}`}
+      class={`fade-in media *:h-auto ${widthAuto ? "w-auto" : "w-full"} object-cover ${cropped ? "[clip-path:inset(-3px)]" : ""} ${className}`}
       style={{ transform: `scale(${scaling})` }}
       alt={alt}
     >
@@ -38,7 +38,7 @@ const posterSrc = "posters" + src.replace(/\.(mp4|webm|ogg)$/i, ".jpg");
       alt={alt}
       loading="lazy"
       decoding="async"
-      class={`media h-auto ${widthAuto ? "w-auto" : "w-full"} object-cover ${cropped ? "[clip-path:inset(-3px)]" : ""} ${className}`}
+      class={`fade-in media h-auto ${widthAuto ? "w-auto" : "w-full"} object-cover ${cropped ? "[clip-path:inset(-3px)]" : ""} ${className}`}
     />
   )
 }
